Avoid awkward line breaks in info text

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body.yellow {
 }
 
 .info-box .text {
-    width: 500px;
+    width: 560px;
     margin: 0 auto;
     font-family: Gotham-Book;
 }
